--- a/style.css
+++ b/style.css
@@ -1315,6 +1315,11 @@ ul {
     flex-direction: column;
     width: 100%;
   }
+  
+  .description p {
+    font-size: 10px;
+  }
+
   .wrapper{
     height: 65vh;
   }
@@ -1359,6 +1364,7 @@ ul {
     transform: translateY(18px);
   }
 }
+
 @media (max-width: 947px) {
   .menu-btn {
     display: block;
@@ -1471,5 +1477,8 @@ ul {
     width: 35px;
     font-size: 23px;
     line-height: 38px;
+  }
+  .slider > .line > .description{
+    width: 327px
   }
 }
