--- a/style.css
+++ b/style.css
@@ -1178,8 +1178,33 @@ ul {
 
 
 
+/**********************************************************************MENTION LEGALE***********************************************************/ 
+
+.mention .max-width{
+  padding-top: 180px; 
+  padding-bottom: 180px; 
+
+}
 
 
+.mention .max-width p{ 
+  padding-bottom: 30px; 
+
+}
+
+.mention .max-width { 
+  padding-top: 180px; 
+  padding-bottom: 180px; 
+
+}
+
+
+
+
+
+
+
+/**********************************************************************MEDIA***********************************************************/ 
 
 
 
