--- a/style.css
+++ b/style.css
@@ -119,6 +119,67 @@ display: none;
 
 
 
+
+
+/**********************************************************************Cookie banner ***********************************************************************/
+
+.cookie-banner {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--main-bg-color);
+  color: var(--second-color);
+  padding: 15px;
+  text-align: center;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; 
+  gap: 10px
+}
+
+.cookie-banner p {
+  font-size: 16px;
+}
+
+.cookie-banner p a {
+  color: var(--main2-bg-color);
+  font-weight: bolder;
+  transition: .3s;
+}
+
+.cookie-banner p a:hover {
+  color: var(--second-color);
+  font-weight: 900;
+}
+
+.cookie-banner button {
+  background-color: var(--second-color);
+  color: var(--main-bg-color);
+  padding: 10px 15px; 
+  border-radius: 10px; 
+  cursor:pointer;
+  border:0px;
+  display: block;
+  width: fit-content; 
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.cookie-banner button:active{
+  background-color: var(--second-color);
+  color: var(--main-bg-color);
+  padding: 8px 13px;
+}
+
+.cookie-banner button:hover{
+  background-color: var(--main-bg-color-color);
+  color: var(--second-color);
+  transform: scale(.99);
+  border: var(--second-color) solid .5px;
+}
+
 /**********************************************************************all similar content styling codes ***********************************************************************/
 
 
@@ -236,7 +297,7 @@ section .title::after {
 .navbar .menu li a:hover {
   color: var(--second-color);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  background-color: rgba(0, 0, 0, .3);
+  background-color: var(--main-bg-color);
   border-radius: 20px;
 
 }
@@ -404,7 +465,7 @@ section .title::after {
 .home .home-content a:hover {
   color: var(--main-bg-color);
   background: var(--second-color);
-  border: 2px solid var(--second-color);
+  border: var(--main-bg-color) solid 2px  ;
   
 }
 
@@ -536,6 +597,8 @@ section .title::after {
 
 .articles .articlesl .tab-button .case-contain .tab-titre{
   font-weight: bold;
+  text-transform: uppercase;
+  color: var(--second-color);
 }
 
 
@@ -608,7 +671,7 @@ section .title::after {
 
   .article-mobile {
   width: 100%;
-  height: 75vh;
+  height: 130vh;
   display: flex!important;
   align-items: center;
   justify-content: center;
@@ -641,7 +704,7 @@ section .title::after {
   color: white;
   display: flex;
   flex-wrap: nowrap;
-  background-color: var(--main-bg-color);
+  background: linear-gradient(to right, var(--main-bg-color), var(--main2-bg-color));
   padding: 10px 0 10px 0;
   width: 100%;
   }
@@ -649,6 +712,7 @@ section .title::after {
   .am-slider > .am-line > .icon {
   margin: 15px;
   transform: rotate(90deg);
+  width: 0 ;
   }
   
   .am-slider > .am-line > .am-description {
@@ -656,9 +720,9 @@ section .title::after {
   justify-content: center;
   flex-direction: column;
   overflow: hidden;
-  height: 80px;
-  width: 100%;
-  padding: 20px;
+  height: 130px;
+  width: 80%;
+  padding: 10px;
   transition: all 0.3s ease;
   }
   
@@ -669,6 +733,7 @@ section .title::after {
   
   .am-description h4 {
   text-transform: uppercase;
+  font-size: 14px;
   }
   
   .article-mobile .am-slide input {
@@ -680,6 +745,12 @@ section .title::after {
   margin-top: 10px;
   
   }
+
+  .article-mobile .am-slide input + label .am-description {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+    text-align: center;
+    }
   
   .article-mobile .am-slide input:checked + label .am-description {
   opacity: 1 !important;
@@ -720,9 +791,7 @@ section .title::after {
     font-size: 10px;
   }
 
-  .article-mobile{
-    height: 115vh;
-  }
+ 
 }
 
 /****************************          about section styling             *******************************/
@@ -1513,7 +1582,7 @@ ul {
   }
 
   .icon {
-    width: 23px;
+    width: 50px;
   }
 
   .input {
@@ -1602,6 +1671,11 @@ ul {
   .scroll-up-btn{
     transform: translateY(18px);
   }
+
+  .navbar.sticky .max-width ul li a {
+    color:var(--second-bg-color)
+  }
+  
 }
 
 @media (max-width: 947px) {
