--- a/style.css
+++ b/style.css
@@ -671,7 +671,7 @@ section .title::after {
 
   .article-mobile {
   width: 100%;
-  height: 130vh;
+  height: 140vh;
   display: flex!important;
   align-items: center;
   justify-content: center;
@@ -747,14 +747,12 @@ section .title::after {
   }
 
   .article-mobile .am-slide input + label .am-description {
-    opacity: 1 !important;
-    transform: translateY(0) !important;
-    text-align: center;
-    }
-  
-  .article-mobile .am-slide input:checked + label .am-description {
   opacity: 1 !important;
   transform: translateY(0) !important;
+  text-align: center;
+  }
+  
+  .article-mobile .am-slide input:checked + label .am-description {
   text-align: center;
   }
 
@@ -1673,7 +1671,7 @@ ul {
   }
 
   .navbar.sticky .max-width ul li a {
-    color:var(--second-bg-color)
+    color:var(--second-color)
   }
   
 }
