--- a/style.css
+++ b/style.css
@@ -505,8 +505,7 @@ section .title::after {
   text-align: center;
   border-radius: 26px;
   transition: all 0.3s ease;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  padding: 50px 25px;
-
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .services .serv-content .card:hover {
