--- a/style.css
+++ b/style.css
@@ -505,7 +505,8 @@ section .title::after {
   text-align: center;
   border-radius: 26px;
   transition: all 0.3s ease;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 40px;
 }
 
 .services .serv-content .card:hover {
