--- a/style.css
+++ b/style.css
@@ -296,7 +296,6 @@ section .title::after {
 
 .navbar .menu li a:hover {
   color: var(--second-color);
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   background-color: var(--main-bg-color);
   border-radius: 10px;
 
@@ -344,7 +343,7 @@ section .title::after {
   display: none;
 }
 
-.menu-btn .fa-bars{
+.menu-btn .fas + .fa-bars + .active{
   color: var(--main-bg-color)
 }
 
@@ -668,131 +667,7 @@ section .title::after {
 
 @media (max-width: 991px) {
 
-  .articles{
-    display: none;
-  }
-
-  .article-mobile {
-  width: 100%;
-  height: 140vh;
-  display: flex!important;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding-bottom: 100px ;
-  }
   
-  .am-slide {
-  display: flex;
-  justify-content: start;
-
-  
-  }
-  
-  .am-slider {
-  border-radius: .75rem;
-  background-size: cover;
-  cursor: pointer;
-  overflow: hidden;
-  border-radius: 2rem;
-  margin: 0 10px;
-  margin-top: 10px;
-  display: flex;
-  align-items: flex-end;
-  transition: .6s cubic-bezier(.28,-0.03,0,.99);
-  box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
-  }
-  
-  .am-slider > .am-line {
-  color: white;
-  display: flex;
-  flex-wrap: nowrap;
-  background: linear-gradient(to right, var(--main-bg-color), var(--main2-bg-color));
-  padding: 10px 0 10px 0;
-  width: 100%;
-  }
-  
-  .am-slider > .am-line > .icon {
-  margin: 15px;
-  transform: rotate(90deg);
-  width: 0 ;
-  }
-  
-  .am-slider > .am-line > .am-description {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  overflow: hidden;
-  height: 130px;
-  width: 80%;
-  padding: 10px;
-  transition: all 0.3s ease;
-  }
-  
-  .am-description p {
-  color: var(--second-color);
-  padding-top: 5px;
-  }
-  
-  .am-description h4 {
-  text-transform: uppercase;
-  font-size: 14px;
-  }
-  
-  .article-mobile .am-slide input {
-  display: none;
-  }
-  
-  .article-mobile .am-slide input:checked + label {
-  height: 300px;
-  margin-top: 10px;
-  
-  }
-
-  .article-mobile .am-slide input + label .am-description {
-  opacity: 1 !important;
-  transform: translateY(0) !important;
-  text-align: center;
-  }
-  
-  .article-mobile .am-slide input:checked + label .am-description {
-  text-align: center;
-  }
-
-  .article-mobile .am-slide input:checked + label .icon svg {
-  transform: rotate(180deg) !important;
-  
-  }
-  
-  .am-slider[for="a1"] {
-  background-image: url('images/bh.png');
-  }
-  .am-slider[for="a2"] {
-  background-image: url('images/banner.png');
-  }
-  .am-slider[for="a3"] {
-  background-image: url('images/vg.png');
-  }
-  .am-slider[for="a4"] {
-  background-image: url('images/vv.png');
-  }
-  .am-slider[for="a5"] {
-  background-image: url('images/vf.png');
-  }
-  .am-slider[for="a6"] {
-  background-image: url('images/fd.png');
-  }
-
-  .am-slide{
-    flex-direction: column;
-    width: 100%;
-  }
-  
-  .am-description p {
-    font-size: 10px;
-  }
-
- 
 }
 
 /****************************          about section styling             *******************************/
@@ -800,7 +675,6 @@ section .title::after {
 
 .wrapper {
   width: 100%;
-  height: 75vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1619,6 +1493,118 @@ ul {
 }
 
 @media (max-width: 991px) {
+  .articles{
+    display: none;
+  }
+
+  .article-mobile {
+  width: 100%;
+  display: flex!important;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-bottom: 50px ;
+  }
+  
+  .am-slide {
+  display: flex;
+  justify-content: start;
+
+  
+  }
+  
+  .am-slider {
+  background-size: cover;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 2rem;
+  margin: 0 10px;
+  margin-top: 10px;
+  display: flex;
+  align-items: flex-end;
+  transition: .6s cubic-bezier(.28,-0.03,0,.99);
+  box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+  }
+  
+  .am-slider > .am-line {
+  color: white;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  background: linear-gradient(to right, var(--main-bg-color), var(--main2-bg-color));
+  padding: 10px 0 10px 0;
+  width: 100%;
+  }
+  
+  .am-slider > .am-line > .icon {
+  margin: 15px;
+  transform: rotate(90deg);
+  width: 50px ;
+  height: 50px;
+  }
+  
+  .am-description p {
+  color: var(--second-color);
+  padding-top: 5px;
+  font-size: 10px;
+
+  }
+  
+  .am-description h4 {
+  text-transform: uppercase;
+  font-size: 14px;
+  }
+  
+  .article-mobile .am-slide input {
+  display: none;
+  }
+  
+  .article-mobile .am-slide input:checked + label {
+  height: 300px;
+  margin-top: 10px;
+  
+  }
+
+  .article-mobile .am-slide input + label .am-description {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 80%;
+  padding: 10px;
+  transition: all 0.3s ease;
+  }
+
+  .article-mobile .am-slide input:checked + label .icon svg {
+  transform: rotate(180deg) !important;
+  
+  }
+  
+  .am-slider[for="a1"] {
+  background-image: url('images/bh.png');
+  }
+  .am-slider[for="a2"] {
+  background-image: url('images/banner.png');
+  }
+  .am-slider[for="a3"] {
+  background-image: url('images/vg.png');
+  }
+  .am-slider[for="a4"] {
+  background-image: url('images/vv.png');
+  }
+  .am-slider[for="a5"] {
+  background-image: url('images/vf.png');
+  }
+  .am-slider[for="a6"] {
+  background-image: url('images/fd.png');
+  }
+
+  .am-slide{
+    flex-direction: column;
+    width: 100%;
+  } 
   .max-width {
     padding: 0 50px;
   }
@@ -1630,10 +1616,6 @@ ul {
   
   .description p {
     font-size: 10px;
-  }
-
-  .wrapper{
-    height: 65vh;
   }
 
   .wrapper .slide input:checked + label{
