--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ html {
 }
 
 .contact-button-contain a {
-  color: black;
+  color: var(--main-bg-color);
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -279,32 +279,27 @@ section .title::after {
 }
 
 .flag-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    margin: 5px;
-    transition: transform 0.2s, box-shadow 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 2px 5px;
+      font-size: 16px;
+      font-family: Arial, sans-serif;
+      background-color: #f3f3f3;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
   }
 
-  .flag-button:hover {
-    transform: scale(1.1);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+.flag-button:hover{
+      background-color: #e0e0e0;
   }
 
-  .flag-uk {
-    background: linear-gradient(90deg, red 33%, white 33%, white 66%, blue 66%);
-    border: 2px solid #00008b; /* Bleu foncé du drapeau */
-  }
-
-  .flag-fr {
-    background: linear-gradient(90deg, blue 33%, white 33%, white 66%, red 66%);
-    border: 2px solid #0055a4; 
-  }
-
+.trad-button{
+        display: flex;
+        gap : 2px
+    }
 
 
 /****************************         menu btn styling          *******************************/
