--- a/style.css
+++ b/style.css
@@ -112,15 +112,17 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px; /* Espacement entre les boutons */
-  padding: 10px;
   border-radius: 10px;
+  border: 7px double #ffffff;
   transition: background-color 0.3s ease, color 0.3s ease; /* Transition pour le changement de couleur */
 }
 
 .contact-button-contain a:hover {
-  background-color: var(--main-bg2-color);
-  color: var(--main-bg-color);
+  color: var(--main-bg2-color);
+}
+.contact-button-contain a:active{
+  transform: scale(1.2);
+  transition: ease-in .2s;
 }
 
 .contact-button-contain a i {
@@ -1621,7 +1623,7 @@ ul {
   .contact-button-contain{
     bottom: 0;
     width: 80%;
-    top: 93%;
+    top: 92%;
     flex-direction: row;
     justify-content: space-around;
     left: 10px; 
