--- a/style.css
+++ b/style.css
@@ -1482,6 +1482,10 @@ ul {
 
 @media (max-width: 991px) {
 
+  .navbar .max-width .logo a img:nth-child(2) {
+    display:none;
+  }
+
   .description h4{
     font-size: 14px;
   }
